finish duplicating scaffolding

--- a/app/views/beacons/index.html.erb
+++ b/app/views/beacons/index.html.erb
@@ -1,2 +1,30 @@
-<h1>Beacons#index</h1>
-<p>Find me in app/views/beacons/index.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<h1>Beacons</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Uuid</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @beacons.each do |beacon| %>
+      <tr>
+        <td><%= beacon.title %></td>
+        <td><%= beacon.description %></td>
+        <td><%= beacon.uuid %></td>
+        <td><%= link_to 'Show', beacon %></td>
+        <td><%= link_to 'Edit', edit_beacon_path(beacon) %></td>
+        <td><%= link_to 'Destroy', beacon, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Beacon', new_beacon_path %>
