--- a/app/views/beacons/show.html.erb
+++ b/app/views/beacons/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Beacons#show</h1>
-<p>Find me in app/views/beacons/show.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<p>
+  <strong>Title:</strong>
+  <%= @beacon.title %>
+</p>
+
+<p>
+  <strong>Description:</strong>
+  <%= @beacon.description %>
+</p>
+
+<p>
+  <strong>Uuid:</strong>
+  <%= @beacon.uuid %>
+</p>
+
+<%= link_to 'Edit', edit_beacon_path(@beacon) %> |
+<%= link_to 'Back', beacons_path %>
+
