--- a/app/views/points/new.html.erb
+++ b/app/views/points/new.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Point</h1>
+<h1>New Point</h1>
 
 <%= render 'form', point: @point %>
 
-<%= link_to 'Show', @point %> |
 <%= link_to 'Back', points_path %>
