--- a/app/views/beacons/_form.html.erb
+++ b/app/views/beacons/_form.html.erb
@@ -21,6 +21,21 @@
     <%= f.text_field :description %>
   </div>
 
+  <div class="field">
+    <%= f.label :uuid %>
+    <%= f.text_field :uuid %>
+  </div>
+
+  <div class="field">
+    <%= f.label :major_uuid %>
+    <%= f.text_field :major_uuid %>
+  </div>
+
+  <div class="field">
+    <%= f.label :minor_uuid %>
+    <%= f.text_field :minor_uuid %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
