--- a/app/views/historical_events/index.html.erb
+++ b/app/views/historical_events/index.html.erb
@@ -1,2 +1,28 @@
-<h1>HistoricalEvents#index</h1>
-<p>Find me in app/views/historical_events/index.html.erb</p>
+<h1>Historical Events</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Date</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @historical_events.each do |historical_event| %>
+      <tr>
+        <td><%= historical_event.title %></td>
+        <td><%= historical_event.description %></td>
+        <td><%= historical_event.date %></td>
+        <td><%= link_to 'Show', historical_event %></td>
+        <td><%= link_to 'Edit', edit_historical_event_path(historical_event) %></td>
+        <td><%= link_to 'Destroy', historical_event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Historical Event', new_historical_event_path %>
