--- a/app/views/notifications/_form.html.erb
+++ b/app/views/notifications/_form.html.erb
@@ -30,6 +30,8 @@
     <%= f.label :exit_message %>
     <%= f.text_field :exit_message %>
   </div>
+  
+  <%= f.collection_select :beacon_id, Beacon.all, :id, :title %>
 
   <div class="actions">
     <%= f.submit %>
