--- a/app/views/notifications/show.html.erb
+++ b/app/views/notifications/show.html.erb
@@ -9,18 +9,18 @@
 </p>
 
 <p>
-  <strong>Uuid:</strong>
-  <%= @notification.uuid %>
+  <strong>Entry Message:</strong>
+  <%= @notification.entry_message %>
 </p>
 
 <p>
-  <strong>Major Uuid:</strong>
-  <%= @notification.major_uuid %>
+  <strong>Exit Message:</strong>
+  <%= @notification.exit_message %>
 </p>
 
 <p>
-  <strong>Minor Uuid:</strong>
-  <%= @notification.minor_uuid %>
+  <strong>Beacon Id:</strong>
+  <%= @notification.beacon_id %>
 </p>
 
 <%= link_to 'Edit', edit_notification_path(@notification) %> |
