--- a/app/views/promotions/edit.html.erb
+++ b/app/views/promotions/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Promotions#edit</h1>
-<p>Find me in app/views/promotions/edit.html.erb</p>
+<h1>Editing Promotion</h1>
+
+<%= render 'form', promotion: @promotion %>
+
+<%= link_to 'Show', @promotion %> |
+<%= link_to 'Back', promotions_path %>
