--- a/app/views/historical_events/show.html.erb
+++ b/app/views/historical_events/show.html.erb
@@ -1,4 +1,8 @@
 <p>
+  <%= image_tag @historical_event.image.url(:medium) %>
+</p>
+
+<p>
   <strong>Title:</strong>
   <%= @historical_event.title %>
 </p>
