--- a/app/views/notifications/show.html.erb
+++ b/app/views/notifications/show.html.erb
@@ -1,4 +1,8 @@
 <p>
+  <%= image_tag @notification.image.url(:medium) %>
+</p>
+
+<p>
   <strong>Title:</strong>
   <%= @notification.title %>
 </p>
