--- a/app/views/notifications/_form.html.erb
+++ b/app/views/notifications/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(notification) do |f| %>
+<%= form_for(notification), html: { multipart: true } do |f| %>
   <% if notification.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(notification.errors.count, "error") %> prohibited this notification from being saved:</h2>
@@ -31,7 +31,14 @@
     <%= f.text_field :exit_message %>
   </div>
   
-  <%= f.collection_select :beacon_id, Beacon.all, :id, :title %>
+  <div class="field">
+    <%= f.label :beacon_id, :beacon %>
+    <%= f.collection_select :beacon_id, Beacon.all, :id, :title %>
+  </div>
+  
+  <div class="field">
+    <%= f.file_field :image %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
