--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(product) do |f| %>
+<%= form_for(product), html: { multipart: true } do |f| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -32,13 +32,15 @@
   </div>
 
   <%= f.fields_for :promotions do |promotions_form| %>
-
     <div class="field">
       <%= promotions_form.label :id, :promotion %>
-      <%= promotions_form.select :id, Promotion.all.map { |c| [c.title, c.id] } %>
+      <%= promotions_form.collection_select :id, Promotion.all, :id, :title %>
     </div>
-
   <% end %>
+  
+  <div class="field">
+    <%= f.file_field :image %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
