--- a/app/views/promotions/_form.html.erb
+++ b/app/views/promotions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(promotion) do |f| %>
+<%= form_for(promotion), html: { multipart: true } do |f| %>
   <% if promotion.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(promotion.errors.count, "error") %> prohibited this promotion from being saved:</h2>
@@ -53,7 +53,11 @@
   
   <div class="field">
     <%= f.label :promotional_id, :promotional %>
-    <%= f.select :promotional_id, Product.all.map { |c| [c.title, c.id] } %>
+    <%= f.collection_select :promotional_id, Product.all, :id, :title %>
+  </div>
+  
+  <div class="field">
+    <%= f.file_field :image %>
   </div>
 
   <div class="actions">
