--- a/app/views/beacons/_form.html.erb
+++ b/app/views/beacons/_form.html.erb
@@ -36,13 +36,17 @@
     <%= f.text_field :minor_uuid %>
   </div>
   
-    <%= f.fields_for :notifications do |notifications_form| %>
-
+  <%= f.fields_for :notifications do |notification_form| %>
     <div class="field">
-      <%= notifications_form.label :id, :notification_id %>
-      <%= notifications_form.select :id, Notification.all.map { |c| [c.title, c.id] } %>
+      <%= notification_form.label :id, :notification %>
+      <%= notification_form.collection_select(:id, @notifications, :id, :title, include_blank: true) %>
     </div>
-
+    <% unless notification_form.object.new_record? %>
+      <div>
+        <%= notification_form.label :_destroy, 'Remove:' %>
+        <%= notification_form.check_box :_destroy %>
+      </div>
+    <% end %>
   <% end %>
 
   <div class="actions">
