products nested params done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,30 @@
-<%= @historical_events %>
-
-<%= "test" %>
+<h3>Routes</h3>
+<ul class="list-unstyled">
+    <li>
+        <%= link_to :beacons, beacons_path %>
+    </li>
+    <li>
+        <%= link_to :notifications, notifications_path %>
+    </li>
+    <li>
+        <%= link_to :promotions, promotions_path %>
+    </li>
+    <li>
+        <%= link_to :products, products_path %>
+    </li>
+    <li>
+        <%= link_to :historical_events, historical_events_path %>
+    </li>
+    <li>
+        <%= link_to :orders, orders_path %>
+    </li>
+    <li>
+        <%= link_to :roles, roles_path %>
+    </li>
+    <li>
+        <%= link_to :points, points_path %>
+    </li>
+    <li>
+        <%= link_to :users, users_path %>
+    </li>
+</ul>
