--- a/app/views/historical_events/_form.html.erb
+++ b/app/views/historical_events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(historical_event), html: { multipart: true } do |f| %>
+<%= form_for(historical_event) do |f| %>
   <% if historical_event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(historical_event.errors.count, "error") %> prohibited this historical_event from being saved:</h2>
