--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(product), html: { multipart: true } do |f| %>
+<%= form_for(product) do |f| %>
   <% if product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -34,7 +34,16 @@
   <%= f.fields_for :promotions do |promotions_form| %>
     <div class="field">
       <%= promotions_form.label :id, :promotion %>
-      <%= promotions_form.collection_select :id, Promotion.all, :id, :title %>
+      <%= promotions_form.collection_select :id, @promotions, :id, :title, include_blank: true %>
+    </div>
+
+    <% unless promotions_form.object.new_record? %>
+      <div>
+        <%= promotions_form.label :_destroy, 'Remove:' %>
+        <%= promotions_form.check_box :_destroy %>
+      </div>
+    <% end %>
+
     </div>
   <% end %>
   
