--- a/app/views/promotions/_form.html.erb
+++ b/app/views/promotions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(promotion), html: { multipart: true } do |f| %>
+<%= form_for(promotion) do |f| %>
   <% if promotion.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(promotion.errors.count, "error") %> prohibited this promotion from being saved:</h2>
@@ -50,12 +50,7 @@
     <%= f.label :expiration %>
     <%= f.date_field :expiration %>
   </div>
-  
-  <div class="field">
-    <%= f.label :promotional_id, :promotional %>
-    <%= f.collection_select :promotional_id, Product.all, :id, :title %>
-  </div>
-  
+
   <div class="field">
     <%= f.file_field :image %>
   </div>
