--- a/app/views/user_roles/new.html.erb
+++ b/app/views/user_roles/new.html.erb
@@ -1,2 +1,6 @@
-<h1>UserRoles#new</h1>
-<p>Find me in app/views/user_roles/new.html.erb</p>
+<h1>Add Role to User</h1>
+
+<%= render 'form', role: @role %>
+
+<%= link_to 'Back', user_user_roles_path %>
+
