--- a/app/views/user_roles/show.html.erb
+++ b/app/views/user_roles/show.html.erb
@@ -13,4 +13,4 @@
   <%= @role.resource_id.blank? ? "N/A" : @role.resource_id %>
 </p>
 
-<%= link_to 'Back', user_user_roles_path %>
+<%= link_to 'Back', user_roles_path %>
