--- a/app/views/promotions/_form.html.erb
+++ b/app/views/promotions/_form.html.erb
@@ -10,50 +10,8 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </div>
-
-  <div class="field">
-    <%= f.label :code %>
-    <%= f.text_field :code %>
-  </div>
-
-  <div class="field">
-    <%= f.label :redeem_count %>
-    <%= f.number_field :redeem_count %>
-  </div>
-
-  <div class="field">
-    <%= f.label :daily_deal %>
-    <%= f.check_box :daily_deal %>
-  </div>
   
-  <div class="field">
-    <%= f.label :featured %>
-    <%= f.check_box :featured %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :cost %>
-    <%= f.number_field :cost %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :expiration %>
-    <%= f.date_field :expiration %>
-  </div>
-
-  <div class="field">
-    <%= f.file_field :image %>
-  </div>
+  <%= render 'promotion_fields', f: f %>
 
   <div class="actions">
     <%= f.submit %>
