--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -21,7 +21,7 @@
     <%= render 'promotion_fields', f: builder %>
   <% end %>
   
-  <%= link_to_add_fields 'Add Promotion', f, :promotions, { partial: 'promotion_fields' } %>
+  <%= link_to_add_fields 'Add Promotion', f, :promotions %>
 
   <div class="actions">
     <%= f.submit %>
