--- a/app/views/beacons/_form.html.erb
+++ b/app/views/beacons/_form.html.erb
@@ -37,7 +37,7 @@
   </div>
 
 
-  <h3>Notifactions</h3>
+  <h3>Notifications</h3>
   <%= f.fields_for :notifications do |builder| %>
     <%= render 'notifications_fields', f: builder %>
   <% end %>
