--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <%= content_tag :div do %>
       <% if user_signed_in? %>
-        curl -X GET --header 'Authorization: Bearer <%= JWTEncoder.encode({ user_id: current_user.id }) %>' <%= request.original_url %>
+        curl -X GET --header 'Authorization: Bearer <%= JWTEncoder.encode({email: current_user.email, password: 'password123'}) %>' <%= request.original_url %>
       <% end %>
     <% end if Rails.env.development? %>
 
