--- a/app/views/points/_form.html.erb
+++ b/app/views/points/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(point) do |f| %>
+<%= form_for(@point, as: :points) do |f| %>
   <% if point.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(point.errors.count, "error") %> prohibited this point from being saved:</h2>
