--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,6 +19,9 @@
         <%= link_to :orders, orders_path %>
     </li>
     <li>
+        <%= link_to :rewards, rewards_path %>
+    </li>
+    <li>
         <%= link_to :roles, roles_path %>
     </li>
     <li>
