--- a/app/views/points/_form.html.erb
+++ b/app/views/points/_form.html.erb
@@ -1,20 +1,7 @@
-<%= form_for(@point, as: :points) do |f| %>
-  <% if point.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(point.errors.count, "error") %> prohibited this point from being saved:</h2>
+<%= form_for(@point) do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
 
-      <ul>
-      <% point.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :value %>
-    <%= f.text_field :value %>
-  </div>
+  <%= render 'points_fields', f: f %>
 
   <div class="actions">
     <%= f.submit %>
