--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Roles#new</h1>
-<p>Find me in app/views/roles/new.html.erb</p>
+<h1>New Role</h1>
+
+<%= render 'form', role: @role %>
+
+<%= link_to 'Back', roles_path %>
