--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Roles#index</h1>
-<p>Find me in app/views/roles/index.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<h1>Roles</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Resource type</th>
+      <th>Resource ID</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @roles.each do |role| %>
+      <tr>
+        <td><%= role.name %></td>
+        <td><%= role.resource_type %></td>
+        <td><%= role.resource_id %></td>
+        <td><%= link_to 'Show', role_path(id: role) %></td>
+        <td><%= link_to 'Edit', edit_role_path(id: role) %></td>
+        <td><%= link_to 'Destroy', role_path(id: role), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Role', new_role_path %>
