--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
         <%= link_to :roles, roles_path %>
     </li>
     <li>
-        <%= link_to :points, points_path %>
+        <%= link_to :credits, credits_path %>
     </li>
     <li>
         <%= link_to :users, users_path %>
